# zstd-pure-rs

./: .gitignore  Cargo.toml  FUNCTIONS.md  Makefile  README.md  TODO.md  ccc_mapping.toml
examples/: probe_row.rs
src/: lib.rs
src/common/: bits.rs  bitstream.rs  debug.rs  entropy_common.rs  error.rs  fse_decompress.rs  mem.rs  mod.rs  pool.rs  threading.rs  xxhash.rs  zstd_common.rs  zstd_internal.rs
src/compress/: fse_compress.rs  hist.rs  huf_compress.rs  match_state.rs  mod.rs  seq_store.rs  zstd_compress.rs  zstd_compress_literals.rs  zstd_compress_sequences.rs  zstd_compress_superblock.rs  zstd_compress_tests.rs  zstd_cwksp.rs  zstd_double_fast.rs  zstd_fast.rs  zstd_hashes.rs  zstd_lazy.rs  zstd_ldm.rs  zstd_opt.rs  zstd_presplit.rs  zstdmt_compress.rs
src/decompress/: huf_decompress.rs  mod.rs  zstd_ddict.rs  zstd_decompress.rs  zstd_decompress_block.rs
tests/: cli_roundtrip.rs  deep_comparator.rs  fixtures_roundtrip.rs  large_corpus_parity.rs  real_data_expanded.rs  upstream_golden.rs
tests/fixtures/: binary_l12.zst  binary_l3.zst  hello_l1.zst  lorem.txt  lorem50.txt  lorem50_l1.zst  lorem80.txt  lorem80_l1.zst  lorem_l1.zst  lorem_l19.zst  lorem_l1_checksum.zst  rep100_l1.zst  small.fastq  zstd_h_l3.zst  zstd_h_l9_checksum.zst
