[package]
name = "zstd-pure-rs"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust port of the Zstandard (zstd) compression library"
license = "BSD-3-Clause OR GPL-2.0-only"
repository = "https://github.com/henriksson-lab/zstd-pure-rs"
readme = "README.md"
keywords = ["compression", "zstd", "zstandard", "decompression", "pure-rust"]
categories = ["compression"]
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "tests/fixtures/**",
    "Cargo.toml",
    "LICENSE",
    "COPYING",
    "README.md",
    "TODO.md",
]

[lib]
name = "zstd_pure_rs"
path = "src/lib.rs"

[[bin]]
name = "zstd"
path = "src/bin/zstd.rs"
required-features = ["cli"]

[features]
default = ["std"]
std = []
cli = ["std", "dep:clap"]
# Enables multi-threaded compression path (zstdmt).
mt = ["std", "dep:rayon"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
rayon = { version = "1.10", optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
